<resources>
    <string name="app_name">PesanMakanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kfc">kfc</string>
    <string name="spagetti">Spagetti</string>
    <string name="mie_goreng">Mie Goreng</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="imagemiegoreng">ImageMieGoreng</string>
    <string name="imagefriedchicken">ImageFriedChicken</string>
    <string name="HargaMieGoreng">Rp:15.000</string>
    <string name="HargaFriedChicken">Rp:10.000</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="HargaNasiGoreng">Rp:25.000</string>
    <string name="HargaSpagetti">Rp:50.000</string>
    <string name="imagespagetti">ImageSpagetti</string>
    <string name="imagenasigoreng">ImageNasiGoreng</string>
    <string name="buttonBeli">Beli</string>
</resources>