<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_margin="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/LinearFriedChicken"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/imagefriedchicken"
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/kfc" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/fried_chicken" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HargaFriedChicken" />

        <Button
            android:id="@+id/buttonFriedChicken"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonBeli"
            android:textColor="@color/white"
            android:background="@drawable/button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="1">
        <ImageView
            android:contentDescription="@string/imagemiegoreng"
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/miegoreng" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/mie_goreng" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HargaMieGoreng" />
        <Button
            android:id="@+id/buttonMieGoreng"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonBeli"
            android:textColor="@color/white"
            android:background="@drawable/button" />
    </LinearLayout>

</LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:contentDescription="@string/imagenasigoreng"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/nasigoreng" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/nasi_goreng" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HargaNasiGoreng" />
                <Button
                    android:id="@+id/buttonNasiGoreng"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonBeli"
                    android:textColor="@color/white"
                    android:background="@drawable/button" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:contentDescription="@string/imagespagetti"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/spagetti" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/spagetti" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HargaSpagetti" />
                <Button
                    android:id="@+id/buttonSpagetti"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonBeli"
                    android:textColor="@color/white"
                    android:background="@drawable/button" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>